--- a/src/View/header.html.twig
+++ b/src/View/header.html.twig
@@ -20,7 +20,7 @@
                                     <a class="dropdown-item" href="#">Action</a>
                                     <a class="dropdown-item" href="#">Another action</a>
                                     <a class="dropdown-item" href="#">Something else here</a>
-                                    <a class="dropdown-item" href="#">Another action</a>
+                                    <a class="dropdown-item" href="cart">Cart</a>
                                 </div>
                             </li>
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4">
