--- a/src/View/layout_admin.html.twig
+++ b/src/View/layout_admin.html.twig
@@ -70,7 +70,7 @@
         <div class="app-body">
             <div class="app-body-navigation">
                 <nav class="navigation">
-                    <a href="#">
+                    <a href="/admin">
                         <i class="bi bi-speedometer"></i>
                         <span>Dashboard</span>
                     </a>
@@ -78,7 +78,7 @@
                         <i class="bi bi-terminal"></i>
                         <span>Produit</span>
                     </a>
-                    <a href="#">
+                    <a href="/admin/categorie">
                         <i class="bi bi-terminal-split"></i>
                         <span>Categories</span>
                     </a>
