--- a/src/View/Product/show.html.twig
+++ b/src/View/Product/show.html.twig
@@ -4,10 +4,10 @@
     <h1>Produit :</h1>
     <p>{{ product.name }}</p>
     <p>{{ product.description }}</p>
-    {# Boutton d'ajout au panier #}
-    <form method="POST">
+    <form method="POST" action="/cart/add">
         <input type="hidden" name="id" value="{{ product.id }}">
+        <input type="number" name="qty" value="1">
         <button>Ajouter au panier</button>
     </form>
-    <a href="/product">Back</a>
+    <a href="/product">Retour</a>
 {% endblock %}
