--- a/src/View/Auth/login.html.twig
+++ b/src/View/Auth/login.html.twig
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
-<body>
+{% extends 'layout.html.twig' %}
+
+{% block content %}
     <h1>Login</h1>
     <form action="/login" method="POST">
         <label for="username">Username:</label>
@@ -14,5 +9,4 @@
         <input type="password" id="password" name="password" required><br><br>
         <button type="submit">Login</button>
     </form>
-</body>
-</html>
+{% endblock %}
