ajout des bons liens

--- a/src/View/header.html.twig
+++ b/src/View/header.html.twig
@@ -27,14 +27,14 @@
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4">
                                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="categories" role="button" aria-haspopup="true" aria-expanded="false">Categories</a>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="categories?id=1">Categorie 1</a>
+                                    <a class="dropdown-item" href="product">Tous les produits</a>
                                     <a class="dropdown-item" href="categories?id=1">Categorie 2</a>
                                     <a class="dropdown-item" href="categories?id=1">Categorie 3</a>
-                                    <a class="dropdown-item" href="cart">Cart</a>
+                                    <a class="dropdown-item" href="categories?id=1">Categorie 4</a>
                                 </div>
                             </li>
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4">
-                                <a class="nav-link" href="panier"><i class="bi bi-basket2"></i> panier</a>
+                                <a class="nav-link" href="cart"><i class="bi bi-basket2"></i> panier</a>
                             </li>
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4">
                                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="compte" role="button" aria-haspopup="true" aria-expanded="false"><i class="bi bi-person-fill"></i> Compte</a>
