ajout test unitaire, séparation css / html

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,12 +5,11 @@
     --text-color-black: rgb(22, 22, 22);
 
     --main-color: #3A1F24;
-    --secondary-color: #b9835f;
-    --tertiary-color: #62929E;
+    --secondary-color: #A46C35;
+    --tertiary-color: #CEA56A;
     --quaternary-color: #1C2A33;
-    --quinary-color: #4A6D7C; 
-    --sixnary-color: #EEEEFF;  
-
+    --quinary-color: #FFFDE5; 
+    --sixnary-color: #EEE6D8;
 }
 
 
