--- a/src/View/Product/index.html.twig
+++ b/src/View/Product/index.html.twig
@@ -1,21 +1,7 @@
 {% extends 'layout.html.twig' %}
 
 {% block stylesheet %}
-<style>
-    li {
-        list-style: none;
-    }
-
-    button {
-        color: var(--sixnary-color);
-        background-color: var(--quaternary-color);
-        border: none;
-        border-radius: 10px;
-        min-width: 20%;
-        min-height: 40px;
-        margin-left: 40%;
-    }
-</style>
+<link rel="stylesheet" href="/assets/css/product/product.css">
 {% endblock %}
 
 {% block content %}
