--- a/src/View/Auth/login.html.twig
+++ b/src/View/Auth/login.html.twig
@@ -1,12 +1,84 @@
 {% extends 'layout.html.twig' %}
 
+{% block title %}Login{% endblock %}
+
 {% block content %}
-    <h1>Login</h1>
-    <form action="/login" method="POST">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br><br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br><br>
-        <button type="submit">Login</button>
-    </form>
+<div class="form">
+   <ul class="tab-group">
+     <li class="tab active"><a href="#signup">Sign Up</a></li>
+     <li class="tab"><a href="#login">Log In</a></li>
+   </ul>
+   
+   <div class="tab-content">
+     <div id="signup">   
+       <h1>Sign Up for Free</h1>
+       
+       <form action="/signup" method="post">
+       
+       <div class="top-row">
+         <div class="field-wrap">
+           <label for="first_name">
+             First Name<span class="req">*</span>
+           </label>
+           <input type="text" id="first_name" name="first_name" required autocomplete="off" />
+         </div>
+     
+         <div class="field-wrap">
+           <label for="last_name">
+             Last Name<span class="req">*</span>
+           </label>
+           <input type="text" id="last_name" name="last_name" required autocomplete="off"/>
+         </div>
+       </div>
+
+       <div class="field-wrap">
+         <label for="email_signup">
+           Email Address<span class="req">*</span>
+         </label>
+         <input type="email" id="email_signup" name="email" required autocomplete="off"/>
+       </div>
+       
+       <div class="field-wrap">
+         <label for="password_signup">
+           Set A Password<span class="req">*</span>
+         </label>
+         <input type="password" id="password_signup" name="password" required autocomplete="off"/>
+       </div>
+       
+       <button type="submit" class="button button-block">Get Started</button>
+       
+       </form>
+
+     </div>
+     
+     <div id="login">   
+       <h1>Welcome Back!</h1>
+       
+       <form action="/login" method="post">
+       
+         <div class="field-wrap">
+         <label for="email_login">
+           Email Address<span class="req">*</span>
+         </label>
+         <input type="email" id="email_login" name="email" required autocomplete="off"/>
+       </div>
+       
+       <div class="field-wrap">
+         <label for="password_login">
+           Password<span class="req">*</span>
+         </label>
+         <input type="password" id="password_login" name="password" required autocomplete="off"/>
+       </div>
+       
+       <p class="forgot"><a href="#">Forgot Password?</a></p>
+       
+       <button type="submit" class="button button-block">Log In</button>
+       
+       </form>
+
+     </div>
+     
+   </div><!-- tab-content -->
+   
+ </div> <!-- /form -->
 {% endblock %}
