--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/assets/images/favicon.png">
+    <link rel="stylesheet" href="/assets/css/form.css">
 
     <title>{% block title %}{% endblock %}</title>
 
@@ -14,7 +15,11 @@
 
 <body>
     {% block content %}{% endblock %}
-    {% block javascript %}{% endblock %}
+    {% block javascripts %}
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="/assets/js/form.js"></script>
+    {% endblock %}
+
 </body>
 </html>
 
