--- a/src/View/layout_admin.html.twig
+++ b/src/View/layout_admin.html.twig
@@ -74,7 +74,7 @@
                         <i class="bi bi-speedometer"></i>
                         <span>Dashboard</span>
                     </a>
-                    <a href="#">
+                    <a href="/admin/product">
                         <i class="bi bi-terminal"></i>
                         <span>Produit</span>
                     </a>
