--- a/public/assets/css/cart/ordered.css
+++ b/public/assets/css/cart/ordered.css
@@ -11,17 +11,15 @@ h1 {
 
 .basket {
     color: black;
-    background-color: var(--secondary-color);
     border-radius: 15px;
     width: 60%;
 }
 
 .checkout {
-    background-color: var(--tertiary-color);
     height: 20vh;
     width: 30%;
-    border-radius: 15px;
-    color: var(--sixnary-color);
+    border-radius: 5px;
+    border: solid var(--main-color);
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -40,7 +38,7 @@ button {
     color: var(--sixnary-color);
     background-color: var(--quaternary-color);
     border: none;
-    border-radius: 10px;
+    border-radius: 5px;
     min-width: 70%;
     min-height: 40px;
     cursor: pointer;
@@ -56,12 +54,18 @@ button {
 
 li {
     list-style: none;
+    position: relative;
+}
+
+.li {
+    top: 5px;
+    right: 5px;
 }
 
 .ul-bg {
-    background-color: var(--quinary-color);
+    border: solid var(--main-color);
     padding-bottom: 10px;
-    border-radius: 10px;
+    border-radius: 5px;
     width: 95%;
     margin-left: 2.5%;
 }
