--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,7 +4,7 @@
     --text-color-light: rgb(253, 253, 253);
     --text-color-black: rgb(22, 22, 22);
 
-    
+    --main-color: #3A1F24;
     --secondary-color: #A46C35;
     --tertiary-color: #CEA56A;
     --quaternary-color: #1C2A33;
