--- a/src/View/header.html.twig
+++ b/src/View/header.html.twig
@@ -19,18 +19,18 @@
                                 <a class="nav-link" href="http://localhost:8000/">Home</a>
                             </li>
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4">
-                                <a class="nav-link" href="about">Qui nous sommes</a>
+                                <a class="nav-link" href="/about">Qui nous sommes</a>
                             </li>
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4">
-                                <a class="nav-link" href="items">items</a>
+                                <a class="nav-link" href="/items">items</a>
                             </li>
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4">
                                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="categories" role="button" aria-haspopup="true" aria-expanded="false">Categories</a>
                                 <div class="dropdown-menu">
                                     <a class="dropdown-item" href="/product">Tous les produits</a>
-                                    <a class="dropdown-item" href="categories?id=1">Categorie 2</a>
-                                    <a class="dropdown-item" href="categories?id=1">Categorie 3</a>
-                                    <a class="dropdown-item" href="categories?id=1">Categorie 4</a>
+                                    <a class="dropdown-item" href="/categories?id=1">Categorie 2</a>
+                                    <a class="dropdown-item" href="/categories?id=1">Categorie 3</a>
+                                    <a class="dropdown-item" href="/categories?id=1">Categorie 4</a>
                                 </div>
                             </li>
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4">
