--- a/src/View/header.html.twig
+++ b/src/View/header.html.twig
@@ -19,13 +19,13 @@
                                 <a class="nav-link" href="http://localhost:8000/">Home</a>
                             </li>
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4">
-                                <a class="nav-link" href="/about">Qui nous sommes</a>
+                                <a class="nav-link" href="/about">Qui sommes-nous</a>
                             </li>
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4">
                                 <a class="nav-link" href="/items">items</a>
                             </li>
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4">
-                                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="categories" role="button" aria-haspopup="true" aria-expanded="false">Categories</a>
+                                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="/categories" role="button" aria-haspopup="true" aria-expanded="false">Categories</a>
                                 <div class="dropdown-menu">
                                     <a class="dropdown-item" href="/product">Tous les produits</a>
                                     <a class="dropdown-item" href="/categories?id=1">Categorie 2</a>
@@ -39,10 +39,10 @@
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4">
                                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="compte" role="button" aria-haspopup="true" aria-expanded="false"><i class="bi bi-person-fill"></i> Compte</a>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="login">Login</a>
-                                    <a class="dropdown-item" href="logout">Se Deconnecter</a>
-                                    <a class="dropdown-item" href="compte">Mon compte</a>
-                                    <a class="dropdown-item" href="admin">Administration</a>
+                                    <a class="dropdown-item" href="/login">Login</a>
+                                    <a class="dropdown-item" href="/logout">Se Deconnecter</a>
+                                    <a class="dropdown-item" href="/compte">Mon compte</a>
+                                    <a class="dropdown-item" href="/admin">Administration</a>
                                 </div>
                             </li>
                         </ul>
