--- a/src/View/layout_admin.html.twig
+++ b/src/View/layout_admin.html.twig
@@ -82,7 +82,7 @@
                         <i class="bi bi-terminal-split"></i>
                         <span>Categories</span>
                     </a>
-                    <a href="#">
+                    <a href="/admin/stock">
                         <i class="bi bi-list-ol"></i>
                         <span>Stock</span>
                     </a>
