--- a/src/View/Cart/index.html.twig
+++ b/src/View/Cart/index.html.twig
@@ -10,6 +10,7 @@
     {% if status == "updated" %}<h3 class="align"> - Quantité mise à jour</h3>{% endif %}
     {% if status == "deleted" %}<h3 class="align"> - Produit supprimé</h3>{% endif %}
     {% if status == "added" %}<h3 class="align"> - Produit ajouté</h3>{% endif %}
+    {% if status == "modify" %}<h3 class="align"> - Désolé, vous demandez un nombre de produits invalide</h3>{% endif %}
 </div>
 <h2 class="display">Vos articles</h2>
 <div class="display">
