--- a/src/View/Auth/login.html.twig
+++ b/src/View/Auth/login.html.twig
@@ -4,81 +4,95 @@
 
 {% block content %}
 <div class="form">
-   <ul class="tab-group">
-     <li class="tab active"><a href="#signup">S'inscrire</a></li>
-     <li class="tab"><a href="#login">Se connecter</a></li>
-   </ul>
-   
-   <div class="tab-content">
-     <div id="signup">   
-       <h1>Inscription</h1>
-       
-       <form action="/signup" method="post">
-       
-       <div class="top-row">
-         <div class="field-wrap">
-           <label for="first_name">
-             Prénom <span class="req">*</span>
-           </label>
-           <input type="text" id="first_name" name="first_name" required autocomplete="off" />
-         </div>
-     
-         <div class="field-wrap">
-           <label for="last_name">
-             Nom<span class="req">*</span>
-           </label>
-           <input type="text" id="last_name" name="last_name" required autocomplete="off"/>
-         </div>
-       </div>
+    <ul class="tab-group">
+        <li class="tab active"><a href="#signup">S'inscrire</a></li>
+        <li class="tab"><a href="#login">Se connecter</a></li>
+    </ul>
+    
+    <div class="tab-content">
+        <div id="signup">   
+            <h1>Inscription</h1>
+            
+            <form action="/signup" method="post">
+            
+                <div class="top-row">
+                    <div class="field-wrap">
+                        <label for="firstname">
+                            Prénom <span class="req">*</span>
+                        </label>
+                        <input type="text" id="firstname" name="firstname" required autocomplete="off" />
+                    </div>
+                
+                    <div class="field-wrap">
+                        <label for="lastname">
+                            Nom <span class="req">*</span>
+                        </label>
+                        <input type="text" id="lastname" name="lastname" required autocomplete="off"/>
+                    </div>
+                </div>
 
-       <div class="field-wrap">
-         <label for="email_signup">
-           Email <span class="req">*</span>
-         </label>
-         <input type="email" id="email_signup" name="email" required autocomplete="off"/>
-       </div>
-       
-       <div class="field-wrap">
-         <label for="password_signup">
-           Mot de passe <span class="req">*</span>
-         </label>
-         <input type="password" id="password_signup" name="password" required autocomplete="off"/>
-       </div>
-       
-       <button type="submit" class="button button-block">Commencer</button>
-       
-       </form>
+                <div class="field-wrap">
+                    <label for="email_signup">
+                        Email <span class="req">*</span>
+                    </label>
+                    <input type="email" id="email_signup" name="email" required autocomplete="off"/>
+                </div>
+                
+                <div class="field-wrap">
+                    <label for="password_signup">
+                        Mot de passe <span class="req">*</span>
+                    </label>
+                    <input type="password" id="password_signup" name="password" required autocomplete="off"/>
+                </div>
 
-     </div>
-     
-     <div id="login">   
-       <h1>Content de vous revoir</h1>
-       
-       <form action="/login" method="post">
-       
-         <div class="field-wrap">
-         <label for="email_login">
-           Email<span class="req">*</span>
-         </label>
-         <input type="email" id="email_login" name="email" required autocomplete="off"/>
-       </div>
-       
-       <div class="field-wrap">
-         <label for="password_login">
-           Mot de passe<span class="req">*</span>
-         </label>
-         <input type="password" id="password_login" name="password" required autocomplete="off"/>
-       </div>
-       
-       <p class="forgot"><a href="#">Mot de passe oublié</a></p>
-       
-       <button type="submit" class="button button-block">Se connecter</button>
-       
-       </form>
+                <div class="field-wrap">
+                    <label for="role">
+                        Rôle <span class="req">*</span>
+                    </label>
+                    <input type="text" id="role" name="role" required autocomplete="off"/>
+                </div>
 
-     </div>
-     
-   </div><!-- tab-content -->
-   
- </div> <!-- /form -->
+                <div class="field-wrap">
+                    <label for="phone">
+                        Téléphone <span class="req">*</span>
+                    </label>
+                    <input type="text" id="phone" name="phone" required autocomplete="off"/>
+                </div>
+                
+                <button type="submit" class="button button-block">Commencer</button>
+            
+            </form>
+
+        </div>
+        
+        <div id="login">   
+            <h1>Content de vous revoir</h1>
+            
+            <form action="/login" method="post">
+            
+                <div class="field-wrap">
+                    <label for="email_login">
+                        Email<span class="req">*</span>
+                    </label>
+                    <input type="email" id="email_login" name="email" required autocomplete="off"/>
+                </div>
+                
+                <div class="field-wrap">
+                    <label for="password_login">
+                        Mot de passe<span class="req">*</span>
+                    </label>
+                    <input type="password" id="password_login" name="password" required autocomplete="off"/>
+                </div>
+                
+                <p class="forgot"><a href="#">Mot de passe oublié</a></p>
+                
+                <button type="submit" class="button button-block">Se connecter</button>
+            
+            </form>
+
+        </div>
+        
+    </div><!-- tab-content -->
+    
+</div> <!-- /form -->
 {% endblock %}
