--- a/src/View/Admin/Product/_form.html.twig
+++ b/src/View/Admin/Product/_form.html.twig
@@ -45,6 +45,16 @@
 								</div>
 								
 							{% endif %}
+							{% if errors.quantity is defined %}
+						
+							<div class="alert alert-danger alert-dismissible fade show" role="alert">
+								<strong>Attention !</strong> {{ errors.quantity }}
+								<button type="button" class="close btn btn-link" data-dismiss="alert" aria-label="Close">
+								<span aria-hidden="true"><i class="bi bi-x-square"></i></span>
+								</button>
+							</div>
+							
+							{% endif %}
 							{% if errors.category_id is defined %}
 						
 								<div class="alert alert-danger alert-dismissible fade show" role="alert">
@@ -55,6 +65,7 @@
 								</div>
 								
 							{% endif %}
+
 					
 				</div>
 				<div class="card-body">
@@ -71,6 +82,16 @@
 							<label for="price">Prix:</label>
 							<input type="text" class="form-control" id="price" name="price" value="{{item.price}}">
 						</div>
+						{# IL FAUT REGARDER PAR LAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA #}
+						{# IL FAUT REGARDER PAR LAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA #}
+						{# IL FAUT REGARDER PAR LAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA vvvvvvv #}
+						<div class="form-group">
+							<label for="quantity">Quantité:</label>
+							<input type="text" class="form-control" id="quantity" name="quantity" value="{{item.quantity}}">
+						</div>
+						{# IL FAUT REGARDER PAR LAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA ^^^^^#}
+						{# IL FAUT REGARDER PAR LAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA #}
+						{# IL FAUT REGARDER PAR LAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA #}
 						<div class="form-group">
 							<label for="category_id">Category ID:</label>
 							<select class="form-control" id="category_id" name="category_id">
