--- a/src/View/Admin/Product/add.html.twig
+++ b/src/View/Admin/Product/add.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout_admin.html.twig' %}
 
 {% block content %}
-    <h1>Ajouter nouvelle Categorie</h1>
+    <h1>Ajouter un nouveau produit</h1>
     {% include 'Admin/Product/_form.html.twig' %}
 {% endblock %}
