--- a/src/View/Admin/Product/index.html.twig
+++ b/src/View/Admin/Product/index.html.twig
@@ -77,8 +77,9 @@
                             <th scope="col">ID</th>
                             <th scope="col">Nom</th>
                             <th scope="col">Description</th>
-                            <th scope="col">prix</th>
+                            <th scope="col">Prix</th>
                             <th scope="col">Categorie</th>
+                            <th scope="col">Stock</th>
                             <th scope="col">Action</th>
                           </tr>
                         </thead>
@@ -91,6 +92,7 @@
                                 <td>{{ item.description[:10] }}...</td>
                                 <td>{{ item.price }}</td>
                                 <td>{{ item.category_id }}</td>
+                                <td>{{ item.quantity }}</td>
                                 <td class="table_action">
                                     <a href="/admin/product/show?id={{ item.id }}"><i class="bi bi-eye"></i></a>
                                     <a href="/admin/product/delete?id={{ item.id }}"><i class="bi bi-x-square"></i></a>
