--- a/src/View/layout_admin.html.twig
+++ b/src/View/layout_admin.html.twig
@@ -86,7 +86,7 @@
                         <i class="bi bi-list-ol"></i>
                         <span>Stock</span>
                     </a>
-                    <a href="#">
+                    <a href="/admin/user">
                         <i class="bi bi-file-person"></i>
                         <span>Utilisateur</span>
                     </a>
