fin stock dans product

--- a/src/View/Admin/Product/_form.html.twig
+++ b/src/View/Admin/Product/_form.html.twig
@@ -82,16 +82,10 @@
 							<label for="price">Prix:</label>
 							<input type="text" class="form-control" id="price" name="price" value="{{item.price}}">
 						</div>
-						{# IL FAUT REGARDER PAR LAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA #}
-						{# IL FAUT REGARDER PAR LAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA #}
-						{# IL FAUT REGARDER PAR LAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA vvvvvvv #}
 						<div class="form-group">
 							<label for="quantity">Quantité:</label>
-							<input type="text" class="form-control" id="quantity" name="quantity" value="{{item.quantity}}">
+							<input type="text" class="form-control" id="quantity" name="quantity" value="{{stock.quantity}}">
 						</div>
-						{# IL FAUT REGARDER PAR LAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA ^^^^^#}
-						{# IL FAUT REGARDER PAR LAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA #}
-						{# IL FAUT REGARDER PAR LAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA #}
 						<div class="form-group">
 							<label for="category_id">Category ID:</label>
 							<select class="form-control" id="category_id" name="category_id">
