--- a/src/View/Admin/Product/index.html.twig
+++ b/src/View/Admin/Product/index.html.twig
@@ -90,7 +90,7 @@
                                 <th scope="row">{{ item.id }}</th>
                                 <td>{{ item.name }}</td>
                                 <td>{{ item.description[:10] }}...</td>
-                                <td>{{ item.price }}</td>
+                                <td>{{ item.price|intToCurrency }}</td>
                                 <td>{{ item.category_id }}</td>
                                 <td>{{ item.quantity }}</td>
                                 <td class="table_action">
