--- a/src/View/Admin/Product/show.html.twig
+++ b/src/View/Admin/Product/show.html.twig
@@ -3,5 +3,5 @@
 {% block content %}
     <h1>Item {{ item.name }}</h1>
     <p>{{ item.id }}. {{ item.name }}</p>
-    <a href="/admin/categorie">Back</a>
+    <a href="/admin/product">Back</a>
 {% endblock %}
