--- a/src/View/Admin/Product/index.html.twig
+++ b/src/View/Admin/Product/index.html.twig
@@ -84,14 +84,13 @@
                           </tr>
                         </thead>
                         <tbody>
-
                             {% for item in items %}
                             <tr>
                                 <th scope="row">{{ item.id }}</th>
                                 <td>{{ item.name }}</td>
                                 <td>{{ item.description[:10] }}...</td>
                                 <td>{{ item.price|intToCurrency }}</td>
-                                <td>{{ item.category_id }}</td>
+                                <td>{{ item.category_name }}</td>
                                 <td>{{ item.quantity }}</td>
                                 <td class="table_action">
                                     <a href="/admin/product/show?id={{ item.id }}"><i class="bi bi-eye"></i></a>
@@ -99,9 +98,9 @@
                                     <a href="/admin/product/edit?id={{ item.id }}"><i class="bi bi-pencil-square"></i></a>
                                 </td>
                               </tr>
-                            {% else %}
-                                <tr>
-                                    <th scope="row">Rien a afficher</th>
+                              {% else %}
+                              <tr>
+                                  <th scope="row">Rien a afficher</th>
                                 </tr>
                             {% endfor %}
 
