--- a/public/assets/css/cart/ordered.css
+++ b/public/assets/css/cart/ordered.css
@@ -26,6 +26,7 @@ h1 {
     justify-content: center;
     align-items: center;
     gap: 15%;
+    background-color: white;
 }
 
 .list {
@@ -56,4 +57,5 @@ li {
     border-radius: 5px;
     width: 95%;
     margin-left: 2.5%;
+    background-color: white;
 }
