correction fichier .yml et gestion connexion

--- a/src/View/Auth/login.html.twig
+++ b/src/View/Auth/login.html.twig
@@ -17,17 +17,17 @@
             
                 <div class="top-row">
                     <div class="field-wrap">
-                        <label for="firstname">
+                        <label for="first_name">
                             Prénom <span class="req">*</span>
                         </label>
-                        <input type="text" id="firstname" name="firstname" required autocomplete="off" />
+                        <input type="text" id="first_name" name="first_name" required autocomplete="off" />
                     </div>
                 
                     <div class="field-wrap">
-                        <label for="lastname">
+                        <label for="last_name">
                             Nom <span class="req">*</span>
                         </label>
-                        <input type="text" id="lastname" name="lastname" required autocomplete="off"/>
+                        <input type="text" id="last_name" name="last_name" required autocomplete="off"/>
                     </div>
                 </div>
 
