--- a/src/View/Cart/index.html.twig
+++ b/src/View/Cart/index.html.twig
@@ -11,7 +11,7 @@
     {% if status == "deleted" %}<h3 class="align"> - Produit supprimé</h3>{% endif %}
     {% if status == "added" %}<h3 class="align"> - Produit ajouté</h3>{% endif %}
     {% if status == "falseQuantity" %}<h3 class="align"> - La quantité est invalide</h3>{% endif %}
-    {% if status == "unavailableQuantity" %}<h3 class="align"> - Le produit n'est pas disponible dans cette quantité</h3>{% endif %}
+    {% if status == "unavailableQuantity" %}<h3 class="align red"> - Le produit n'est pas disponible dans cette quantité !</h3>{% endif %}
 </div>
 <h2 class="display">Vos articles</h2>
 <div class="display">
