affiche grossièrement les commandes

--- a/src/View/layout_admin.html.twig
+++ b/src/View/layout_admin.html.twig
@@ -90,6 +90,10 @@
                         <i class="bi bi-file-person"></i>
                         <span>Utilisateur</span>
                     </a>
+                    <a href="/admin/orderitem">
+                        <i class="bi bi-terminal-split"></i>
+                        <span>Commandes</span>
+                    </a>
                     <a href="#">
                         <i class="bi bi-body-text"></i>
                         <span>LOG</span>
